Finished up static page

--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -1,7 +1,13 @@
-<div>
+<div class="boxy span5 offset4 text-center">
 
-     <h1>My Web Development Journey</h1>
+     <h1 class="custom-h1">My Web Development Journey</h1>
+     
+     <br />
 
      <h2>Turning my Ideas into Reality</h2>
+     
+     <br />
+
+     <%= link_to 'Launch my App', '#', :class => 'btn btn-warning btn-large' %>
 
 </div>
