--- a/app/views/pics/index.html.erb
+++ b/app/views/pics/index.html.erb
@@ -1,3 +1,7 @@
 <h2>
-	<%= @pics.inspect %>
+	<% @pics.each do |pic| %>
+	     Lesson: <%= pic.lesson %>
+	     Emotion: <%= pic.emotion %>
+	     Learned: <%= pic.learned %>
+	<% end %>
 </h2>
