Add actual images to the pic model and hook it up so users can see them

--- a/app/views/pics/index.html.erb
+++ b/app/views/pics/index.html.erb
@@ -4,6 +4,10 @@
      		<h1 class="custom-h1">
 			     Lesson: <%= pic.lesson %>
 			</h1>
+
+			<%= image_tag pic.image %>
+			<br />
+			
 			<h2>
 			     Emotion: <%= pic.emotion %>
 			</h2>
