--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -8,6 +8,6 @@
      
      <br />
 
-     <%= link_to 'Launch my App', '#', :class => 'btn btn-warning btn-large' %>
+     <%= link_to 'Launch my App', pics_path, :class => 'btn btn-warning btn-large' %>
 
 </div>
