--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class="navbar navbar-inverse :responsive => true">
+<div class="navbar navbar-inverse">
   <div class="navbar-inner">
     <div class="container">
  
