testing meta name viewport in static page index

--- a/app/views/static_page/index.html.erb
+++ b/app/views/static_page/index.html.erb
@@ -1,4 +1,4 @@
-<div class="boxy span5 offset4 text-center :responsive => true">
+<div class="boxy span5 offset4 text-center">
 
      <h1 class="custom-h1">My Web Development Journey</h1>
      
