--- a/app/views/pics/index.html.erb
+++ b/app/views/pics/index.html.erb
@@ -1,6 +1,10 @@
-
+<%= paginate @pics %>
      <% @pics.each do |pic| %>
+     	
+
+     	
      	<div class="boxy span3">
+
      		<h1 class="custom-h1">
 			     Lesson: <%= pic.lesson %>
 			</h1>
@@ -14,6 +18,7 @@
 			<h2>
 			     Learned: <%= pic.learned %>
 			</h2>
+
 		</div>
 	<% end %>
 
